--- a/Assets/Plugins/Android/GoogleMobileAdsPlugin.androidlib/AndroidManifest.xml
+++ b/Assets/Plugins/Android/GoogleMobileAdsPlugin.androidlib/AndroidManifest.xml
@@ -4,6 +4,6 @@
   <application>
     <uses-library android:required="false" android:name="org.apache.http.legacy" />
     <meta-data android:name="com.google.android.gms.ads.APPLICATION_ID" android:value="ca-app-pub-1320039869895590~7544100097" />
-    <meta-data android:name="com.google.unity.ads.UNITY_VERSION" android:value="2022.3.55f1" />
+    <meta-data android:name="com.google.unity.ads.UNITY_VERSION" android:value="6000.1.0a9" />
   </application>
 </manifest>
