--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -6,6 +6,7 @@
     "com.unity.mobile.android-logcat": "1.4.4",
     "com.unity.postprocessing": "3.4.0",
     "com.unity.recorder": "4.0.3",
+    "com.unity.services.authentication": "3.4.0",
     "com.unity.textmeshpro": "3.0.9",
     "com.unity.timeline": "1.8.7",
     "com.unity.ugui": "2.0.0",
