--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,5 +51,13 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "Beams-Escape-The-Rain.sln"
+    "dotnet.defaultSolution": "Beams-Escape-The-Rain.sln",
+    "workbench.colorCustomizations": {
+        "terminal.background": "#00000000",
+        "minimap.background": "#00000000",
+        "scrollbar.shadow": "#00000000",
+        "activityBar.background": "#172769",
+        "titleBar.activeBackground": "#213793",
+        "titleBar.activeForeground": "#FBFCFE"
+    }
 }
